fix overflowing pixel-canvas

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body, html, #root {
 }
 
 
-.container {
+.canvas-container {
     flex-grow: 2;
 
     padding: 30px 60px;
@@ -44,6 +44,8 @@ body, html, #root {
     justify-content: center;
 
     flex-wrap: wrap;
+
+    overflow-x: auto;
 }
 
 
